UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/Product_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Vision_Proposed_Direct_Rx_Outreach_Units__c</fullName>
        <label>Proposed Direct Rx Outreach Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Direct_Supervalu_Units__c</fullName>
        <label>Proposed Direct Supervalu Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_IndirectRxOutreach_Units__c</fullName>
        <label>Proposed Indirect Rx Outreach Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Indirect_Accerodo_Units__c</fullName>
        <label>Proposed Indirect Accerodo Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Indirect_Cigna_Units__c</fullName>
        <label>Proposed Indirect Cigna Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Indirect_Cordant_Units__c</fullName>
        <label>Proposed Indirect Cordant Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Indirect_ESI_Units__c</fullName>
        <label>Proposed Indirect ESI Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Indirect_Kroger_Units__c</fullName>
        <label>Proposed Indirect Kroger Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Indirect_Supervalu_Units__c</fullName>
        <label>Proposed Indirect Supervalu Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Major_Units__c</fullName>
        <label>Proposed Major Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_OS_Units__c</fullName>
        <label>Proposed OS Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_RAD_Units__c</fullName>
        <label>Proposed RAD Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Share_Percentage__c</fullName>
        <label>Proposed Share Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Smith_Drug_Units__c</fullName>
        <label>Proposed Smith Drug Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_TotalRetailIndirectUnits__c</fullName>
        <label>Proposed Total Retail Indirect Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Units__c</fullName>
        <label>Proposed Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_WMT_Units__c</fullName>
        <label>Proposed WMT Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Sales_Price__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Total_Annual_Units__c</fullName>
        <label>Total Annual Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_UOM__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAPLET</fullName>
                </value>
                <value>
                    <fullName>CAPSULE</fullName>
                </value>
                <value>
                    <fullName>CARTRIDGE</fullName>
                </value>
                <value>
                    <fullName>EA</fullName>
                </value>
                <value>
                    <fullName>FILM</fullName>
                </value>
                <value>
                    <fullName>GM</fullName>
                </value>
                <value>
                    <fullName>KIT</fullName>
                </value>
                <value>
                    <fullName>ML</fullName>
                </value>
                <value>
                    <fullName>PACK</fullName>
                </value>
                <value>
                    <fullName>PACKET</fullName>
                </value>
                <value>
                    <fullName>PATCH</fullName>
                </value>
                <value>
                    <fullName>SPRAY</fullName>
                </value>
                <value>
                    <fullName>SUPPOSITORY</fullName>
                </value>
                <value>
                    <fullName>SYRINGE</fullName>
                </value>
                <value>
                    <fullName>TABLET</fullName>
                </value>
                <value>
                    <fullName>UOM</fullName>
                </value>
                <value>
                    <fullName>VIAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_Uploaded_Pkg_Size__c</fullName>
        <label>Uploaded Pkg Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_confidence_level__c</fullName>
        <label>Vision_confidence_level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_customer_expectation_lead_time__c</fullName>
        <label>Vision_customer_expectation_lead_time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_ext_mfg_scm_approved_by__c</fullName>
        <label>Vision_ext_mfg_scm_approved_by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_ext_mfg_scm_approved_on_date__c</fullName>
        <label>Vision_ext_mfg_scm_approved_on_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vision_ext_mfg_scm_remarks__c</fullName>
        <label>Vision_ext_mfg_scm_remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_inActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>inActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_incremental_volume_by_scm__c</fullName>
        <label>Vision_incremental_volume_by_scm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_india_scm_approved_by__c</fullName>
        <label>Vision_india_scm_approved_by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_india_scm_approved_on_date__c</fullName>
        <label>Vision_india_scm_approved_on_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vision_india_scm_remarks__c</fullName>
        <label>Vision_india_scm_remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_initialorder_volume_by_scm__c</fullName>
        <label>Vision_initialorder_volume_by_scm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_isMovedFromDiscrepancy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isMovedFromDiscrepancy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_isMovedFromUnMatched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isMovedFromUnMatched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_isNewProposedUnits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isNewProposedUnits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_isNoUsage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isNoUsage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_remarks_by_pm__c</fullName>
        <label>Vision_remarks_by_pm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_remarks_by_scm__c</fullName>
        <label>Vision_remarks_by_scm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_scm_approved_date__c</fullName>
        <label>Vision_scm_approved_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vision_scm_manager__c</fullName>
        <label>Vision_scm_manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_sku_split_flag__c</fullName>
        <label>Vision_sku_split_flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_supply_duration_scm__c</fullName>
        <label>Vision_supply_duration_scm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_supply_effectivedate_SCM__c</fullName>
        <label>Vision_supply_effectivedate_SCM</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vision_supply_requirement__c</fullName>
        <label>Vision_supply_requirement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_total_incremental_volume_by_scm__c</fullName>
        <label>Vision_total_incremental_volume_by_scm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_total_initial_order_quantity_by_s__c</fullName>
        <label>Vision_total_initial_order_quantity_by_s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WAC__c</fullName>
        <label>WAC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3MnthAnnualCurrentIndirectSel_Pharmage__c</fullName>
        <label>Current Indirect SellingUnits(Pharmagen)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3MonthAnnualCurrentAutoSubSellingUnit__c</fullName>
        <label>Current Auto Sub Selling Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3MonthAnnualCurrentDSHSellingUnit__c</fullName>
        <label>Current DSH Selling Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3MonthAnnualCurrentIndirectSellingunit__c</fullName>
        <label>3MonthAnnualCurrentIndirectSellingunit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3MonthAnnualCurrent_BASE_Selling_unit__c</fullName>
        <label>Current BASE Selling units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3MonthAnnualCurrent_IndirectSellingunit__c</fullName>
        <label>Current Indirect Selling units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3MonthAnnualTotalDirectSellingUnit__c</fullName>
        <label>Total Direct Selling Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3MonthAnnualTotalIndirectSellingUnit__c</fullName>
        <label>Total Indirect Selling Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3MonthsAnnualizedCVSIndirectSelling_uni__c</fullName>
        <label>CVS Indirect Selling Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3MonthsAnnualized_Crnt_DirectSellinguni__c</fullName>
        <label>Current Direct Selling units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3Months_AnnualizedCVS_DirectSelling_Uni__c</fullName>
        <label>CVS Direct Selling Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3Months_Annualized_Cardinal_Selling_Uni__c</fullName>
        <label>Cardinal Selling Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3Months_Annualized_Indirect_Selling_Uni__c</fullName>
        <label>3MonthsAnnualized Indirect Selling Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3_Months_Annualized_Direct_Selling_Unit__c</fullName>
        <label>3 Months Annualized Direct Selling Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3_Months_Annualized_Major_Selling_Unit__c</fullName>
        <label>Major Selling Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3_Months_Annualized_OS_And_RAD_Units__c</fullName>
        <label>3 Months Annualized OS And RAD Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3_Months_Annualized_Total_Selling_Units__c</fullName>
        <label>3 Months Annualized Total Selling Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3_Months_Annualized_WMT_Direct_Units__c</fullName>
        <label>3 Months Annualized WMT Direct Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3_Months_Annualized_WMT_Indirect_Units__c</fullName>
        <label>3 Months Annualized WMT Indirect Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vision_isSentToBright__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSentToBright</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vision_is_discrepancy_product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Discrepancy Product</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Opportunity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Opportunity</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>